# RP2350Touch4-Exp

./: README.md
exp/drjonea/: CMakeLists.txt  bsp.cmake
exp/drjonea/boards/: waveshare_rp2350_touch_lcd_4.h
exp/drjonea/port/lvgl/: lv_conf.h  lv_port_disp.c  lv_port_disp.h  lv_port_indev.c
exp/drjonea/src/: CMakeLists.txt  Widgets.cpp  Widgets.h  main.cpp
lib/RP2350Touch4/Fonts/: CMakeLists.txt
lib/RP2350Touch4/GUI/: CMakeLists.txt  GUI_Paint.h
lib/RP2350Touch4/bsp/: CMakeLists.txt  bsp_battery.c  bsp_battery.h  bsp_buzzer.c  bsp_buzzer.h  bsp_cst820.c  bsp_cst820.h  bsp_display.h  bsp_dma_channel_irq.c  bsp_dma_channel_irq.h  bsp_gt911.c  bsp_gt911.h  bsp_i2c.c  bsp_i2c.h  bsp_pcf85063.c  bsp_pcf85063.h  bsp_qmi8658.c  bsp_qmi8658.h  bsp_sd_card.c  bsp_sd_card.h  bsp_st7701.c  bsp_st7701.h  bsp_touch.h  bsp_xl2515.c  bsp_xl2515.h  pio_rgb.c  pio_rgb.h  pio_rgb.pio
lib/RP2350Touch4/lvgl/: lv_conf.h.ws
